--- a/slackbook_user/templates/base/channel.html
+++ b/slackbook_user/templates/base/channel.html
@@ -30,29 +30,28 @@
             </div>
             <hr>
             <div class="channel-content">
-                <!-- <h3><a href="{{request.META.HTTP_REFERER}}"><i class="fas fa-arrow-alt-circle-left"></i></a> Disscussion</h3> -->
-                <h3 class="headline"><a href="{% url 'channel' channel.id %}"><i class="fas fa-arrow-alt-circle-left"></i></a> Disscussion</h3>
+                <h3 class="headline"><a href="{% url 'channel' channel.id %}"><i
+                            class="fas fa-arrow-alt-circle-left"></i></a> Disscussion</h3>
                 {{ channel.content }}
                 <hr>
                 {% for post in objects %}
                 {% if post.channel.title == channel.title  %}
-                    <div>
-                        
-                        <small><a href="{% url 'account' post.user.id %}">@{{ post.user.username }}</a> -
-                            {{ post.created_on|timesince }} ago</small>
-                        <h5>{{ post.title }}</h5>
-                        <p>Comment: {{ post.body }}</p>
-                        {% if post.image %}
-                        <img class="post-image" src="{{ post.image.url }}" alt="post-image">
-                        {% endif %}
-                        {% if request.user == post.user%}
-                        <a href="{% url 'delete-comment' post.id %}"><button
-                                class="btn btn-outline-success button">X</button></a>
-                        {% endif %}
-                        <hr>
-                    </div>
-                {% elif forloop.counter0 == 0 %}
-                    <h4 class="bad-news">No matching posts yet!</h4>
+                <div>
+                    <small><a href="{% url 'account' post.user.id %}">@{{ post.user.username }}</a> -
+                        {{ post.created_on|timesince }} ago</small>
+                    <h5>{{ post.title }}</h5>
+                    <p>Comment: {{ post.body }}</p>
+                    {% if post.image %}
+                    <img class="post-image" src="{{ post.image.url }}" alt="post-image">
+                    {% endif %}
+                    {% if request.user == post.user%}
+                    <a href="{% url 'delete-comment' post.id %}"><button
+                            class="btn btn-outline-success button">X</button></a>
+                    {% endif %}
+                    <hr>
+                </div>
+                {% elif object_count == 1 %}
+                <h4 class="bad-news">No matching posts yet!</h4>
                 {% endif %}
                 {% endfor%}
 
@@ -99,7 +98,7 @@
                 <div>
                     <h2> This is a private Channel. You need to ask the host for access.</h2>
                     <div class="channel-content">
-                        Hosted by: 
+                        Hosted by:
                         {% if channel.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
                         <img class="user-image" src="/static/images/avatar.png" alt="logo">
                         {% else %}
@@ -111,7 +110,7 @@
                         {{channel.host.username}}
                         <br>
                         Please <a href="{% url 'account_signup' %}">Sign Up!</a>
-                        {% endif%}   
+                        {% endif%}
                         <br>
                     </div>
                 </div>
